Fixed: Bug with <h2> HTML tag font styling on mobile

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -886,7 +886,7 @@ h2 {
 }
 @media (max-width: 767px) {
 	h2 {
-		font-size: 1.7;
+		font-size: 1.7rem;
 	}
 }
 h3 {
